--- a/AEDHub/AEDHub.csproj
+++ b/AEDHub/AEDHub.csproj
@@ -51,6 +51,9 @@
     <Reference Include="DevExpress.BonusSkins.v20.1" />
     <Reference Include="DevExpress.Data.Desktop.v20.1" />
     <Reference Include="DevExpress.Data.v20.1" />
+    <Reference Include="DevExpress.Images.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Pdf.v20.1.Core, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Pdf.v20.1.Drawing, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Printing.v20.1.Core" />
     <Reference Include="DevExpress.Utils.v20.1" />
     <Reference Include="DevExpress.XtraBars.v20.1" />
@@ -58,8 +61,12 @@
     <Reference Include="DevExpress.XtraEditors.v20.1" />
     <Reference Include="DevExpress.XtraGrid.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraNavBar.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraPdfViewer.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeList.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -71,17 +78,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="About.cs">
+    <Compile Include="Presentation.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="About.Designer.cs">
-      <DependentUpon>About.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Information.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Information.Designer.cs">
-      <DependentUpon>Information.cs</DependentUpon>
+    <Compile Include="Presentation.Designer.cs">
+      <DependentUpon>Presentation.cs</DependentUpon>
     </Compile>
     <Compile Include="MdiMain.cs">
       <SubType>Form</SubType>
@@ -90,26 +91,77 @@
       <DependentUpon>MdiMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\DEBTOR.cs" />
+    <Compile Include="Models\EMPLOYEE.cs" />
     <Compile Include="Models\PERSON.cs" />
     <Compile Include="Models\PROJECT.cs" />
     <Compile Include="Models\STUDENT.cs" />
-    <Compile Include="Modules\Practical-Activities\AcademyRecord.cs">
+    <Compile Include="Models\UNIVERSITY.cs" />
+    <Compile Include="Modules\Learning-Resources\RA2.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\AcademyRecord.Designer.cs">
-      <DependentUpon>AcademyRecord.cs</DependentUpon>
+    <Compile Include="Modules\Learning-Resources\RA2.designer.cs">
+      <DependentUpon>RA2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modules\Learning-Resources\RA3.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA3.designer.cs">
+      <DependentUpon>RA3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA5.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA5.designer.cs">
+      <DependentUpon>RA5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA6.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA6.designer.cs">
+      <DependentUpon>RA6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA7.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA7.designer.cs">
+      <DependentUpon>RA7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\FrmEmployee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\FrmEmployee.designer.cs">
+      <DependentUpon>FrmEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\FrmQuery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\FrmQuery.designer.cs">
+      <DependentUpon>FrmQuery.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\RA8.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\RA8.designer.cs">
+      <DependentUpon>RA8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Learning-Resources\RA8\Tools.cs" />
     <Compile Include="Modules\Practical-Activities\CreditRecord.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Modules\Practical-Activities\CreditRecord.Designer.cs">
       <DependentUpon>CreditRecord.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\EmploymentRecord.cs">
+    <Compile Include="Modules\Practical-Activities\FrmAcademyRecord.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\EmploymentRecord.Designer.cs">
-      <DependentUpon>EmploymentRecord.cs</DependentUpon>
+    <Compile Include="Modules\Practical-Activities\FrmAcademyRecord.designer.cs">
+      <DependentUpon>FrmAcademyRecord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\FrmEmploymentRecord.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\FrmEmploymentRecord.designer.cs">
+      <DependentUpon>FrmEmploymentRecord.cs</DependentUpon>
     </Compile>
     <Compile Include="Modules\Practical-Activities\ProjectsRecord.cs">
       <SubType>UserControl</SubType>
@@ -117,22 +169,58 @@
     <Compile Include="Modules\Practical-Activities\ProjectsRecord.Designer.cs">
       <DependentUpon>ProjectsRecord.cs</DependentUpon>
     </Compile>
+    <Compile Include="PdfReader.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PdfReader.Designer.cs">
+      <DependentUpon>PdfReader.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="About.resx">
-      <DependentUpon>About.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Information.resx">
-      <DependentUpon>Information.cs</DependentUpon>
+    <EmbeddedResource Include="Presentation.resx">
+      <DependentUpon>Presentation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MdiMain.resx">
       <DependentUpon>MdiMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA2.resx">
+      <DependentUpon>RA2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA3.resx">
+      <DependentUpon>RA3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA5.resx">
+      <DependentUpon>RA5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA6.resx">
+      <DependentUpon>RA6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA7.resx">
+      <DependentUpon>RA7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA8\FrmEmployee.resx">
+      <DependentUpon>FrmEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA8\FrmQuery.resx">
+      <DependentUpon>FrmQuery.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Learning-Resources\RA8\RA8.resx">
+      <DependentUpon>RA8.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Modules\Practical-Activities\CreditRecord.resx">
       <DependentUpon>CreditRecord.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\FrmAcademyRecord.resx">
+      <DependentUpon>FrmAcademyRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\FrmEmploymentRecord.resx">
+      <DependentUpon>FrmEmploymentRecord.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Modules\Practical-Activities\ProjectsRecord.resx">
       <DependentUpon>ProjectsRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PdfReader.resx">
+      <DependentUpon>PdfReader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -157,7 +245,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Modules\Learning-Resources\" />
+    <None Include="Resources\employee.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -172,6 +260,21 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Reports\Gabriel\RA1.pdf" />
+    <None Include="Reports\Gabriel\RA2.pdf" />
+    <None Include="Reports\Gabriel\RA3.pdf" />
+    <None Include="Reports\Gabriel\RA4.pdf" />
+    <None Include="Reports\Gabriel\RA5.pdf" />
+    <None Include="Reports\Gabriel\RA6.pdf" />
+    <None Include="Reports\Gabriel\RA7.pdf" />
+    <None Include="Reports\Gabriel\RA8.pdf" />
+    <None Include="Reports\Marcel\RA1.pdf" />
+    <None Include="Reports\Marcel\RA3.pdf" />
+    <None Include="Reports\Marcel\RA4.pdf" />
+    <None Include="Reports\Marcel\RA5.pdf" />
+    <None Include="Reports\Marcel\RA6.pdf" />
+    <None Include="Reports\Marcel\RA7.pdf" />
+    <None Include="Reports\Marcel\RA8.pdf" />
     <None Include="Resources\uni-rlp.png" />
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +288,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\avatar-gabriel.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\powered-on.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\quey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\git-logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
