Correccion de errores

--- a/AEDHub/AEDHub.csproj
+++ b/AEDHub/AEDHub.csproj
@@ -245,6 +245,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Reports\AP2.pdf" />
     <None Include="Resources\employee.png" />
   </ItemGroup>
   <ItemGroup>
