--- a/AEDHub/AEDHub.csproj
+++ b/AEDHub/AEDHub.csproj
@@ -48,6 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="DevExpress.BonusSkins.v20.1" />
     <Reference Include="DevExpress.Data.Desktop.v20.1" />
     <Reference Include="DevExpress.Data.v20.1" />
@@ -67,7 +68,13 @@
     <Reference Include="DevExpress.XtraTreeList.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +85,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\BankCustomerControlSystem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\BankCustomerControlSystem.Designer.cs">
+      <DependentUpon>BankCustomerControlSystem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\CashForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\CashForm.Designer.cs">
+      <DependentUpon>CashForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\ClientRecord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\ClientRecord.Designer.cs">
+      <DependentUpon>ClientRecord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\DisplayForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\DisplayForm.Designer.cs">
+      <DependentUpon>DisplayForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\ServicesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\BankCustomerControlSystem\ServicesForm.Designer.cs">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\Paths.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modules\Practical-Activities\Paths.Designer.cs">
+      <DependentUpon>Paths.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentation.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -151,17 +194,17 @@
     <Compile Include="Modules\Practical-Activities\CreditRecord.Designer.cs">
       <DependentUpon>CreditRecord.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\FrmAcademyRecord.cs">
+    <Compile Include="Modules\Practical-Activities\AcademyRecord.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\FrmAcademyRecord.designer.cs">
-      <DependentUpon>FrmAcademyRecord.cs</DependentUpon>
+    <Compile Include="Modules\Practical-Activities\AcademyRecord.designer.cs">
+      <DependentUpon>AcademyRecord.cs</DependentUpon>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\FrmEmploymentRecord.cs">
+    <Compile Include="Modules\Practical-Activities\EmploymentRecord.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Modules\Practical-Activities\FrmEmploymentRecord.designer.cs">
-      <DependentUpon>FrmEmploymentRecord.cs</DependentUpon>
+    <Compile Include="Modules\Practical-Activities\EmploymentRecord.designer.cs">
+      <DependentUpon>EmploymentRecord.cs</DependentUpon>
     </Compile>
     <Compile Include="Modules\Practical-Activities\ProjectsRecord.cs">
       <SubType>UserControl</SubType>
@@ -177,6 +220,25 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Global.cs" />
+    <EmbeddedResource Include="Modules\Practical-Activities\BankCustomerControlSystem\BankCustomerControlSystem.resx">
+      <DependentUpon>BankCustomerControlSystem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\BankCustomerControlSystem\CashForm.resx">
+      <DependentUpon>CashForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\BankCustomerControlSystem\ClientRecord.resx">
+      <DependentUpon>ClientRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\BankCustomerControlSystem\DisplayForm.resx">
+      <DependentUpon>DisplayForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\BankCustomerControlSystem\ServicesForm.resx">
+      <DependentUpon>ServicesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modules\Practical-Activities\Paths.resx">
+      <DependentUpon>Paths.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentation.resx">
       <DependentUpon>Presentation.cs</DependentUpon>
     </EmbeddedResource>
@@ -210,11 +272,11 @@
     <EmbeddedResource Include="Modules\Practical-Activities\CreditRecord.resx">
       <DependentUpon>CreditRecord.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Modules\Practical-Activities\FrmAcademyRecord.resx">
-      <DependentUpon>FrmAcademyRecord.cs</DependentUpon>
+    <EmbeddedResource Include="Modules\Practical-Activities\AcademyRecord.resx">
+      <DependentUpon>AcademyRecord.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Modules\Practical-Activities\FrmEmploymentRecord.resx">
-      <DependentUpon>FrmEmploymentRecord.cs</DependentUpon>
+    <EmbeddedResource Include="Modules\Practical-Activities\EmploymentRecord.resx">
+      <DependentUpon>EmploymentRecord.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Modules\Practical-Activities\ProjectsRecord.resx">
       <DependentUpon>ProjectsRecord.cs</DependentUpon>
